<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- homescreen strings -->

    <string name="app_name">Client Screens</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="facerapp_string">FACErapp</string>
    <string name="clocking_list_string">CLOCKING LIST</string>
    <string name="create_new_register_string">Create  new register</string>
    <string name="back_string">Back</string>
    <string name="search_string">search</string>
    <string name="search_student_by_name__surname__or_grade_string">Search student by name, Surname, or Grade</string>
    <string name="students_present__string">Students present:</string>
    <string name="_15_june_2022_string">15 june 2022</string>
    <string name="mpendulo_string">mpendulo</string>
    <string name="mpendulo_ek1_string">mpendulo</string>
    <string name="mpendulo_ek2_string">mpendulo</string>
    <string name="mpendulo_ek3_string">mpendulo</string>
    <string name="nxumalo_string">Nxumalo</string>
    <string name="nxumalo_ek1_string">Nxumalo</string>
    <string name="nxumalo_ek2_string">Nxumalo</string>
    <string name="nxumalo_ek3_string">Nxumalo</string>
    <string name="mpendulo_ek4_string">mpendulo</string>
    <string name="mpendulo_ek5_string">mpendulo</string>
    <string name="mpendulo_ek6_string">mpendulo</string>
    <string name="mpendulo_ek7_string">mpendulo</string>
    <string name="mpendulo_ek8_string">mpendulo</string>
    <string name="mpendulo_ek9_string">mpendulo</string>
    <string name="mpendulo_ek10_string">mpendulo</string>
    <string name="mpendulo_ek11_string">mpendulo</string>
    <string name="nxumalo_ek4_string">Nxumalo</string>
    <string name="nxumalo_ek5_string">Nxumalo</string>
    <string name="nxumalo_ek6_string">Nxumalo</string>
    <string name="nxumalo_ek7_string">Nxumalo</string>
    <string name="nxumalo_ek8_string">Nxumalo</string>
    <string name="nxumalo_ek9_string">Nxumalo</string>
    <string name="nxumalo_ek10_string">Nxumalo</string>
    <string name="nxumalo_ek11_string">Nxumalo</string>
    <string name="choose_grade_string">choose grade</string>
    <string name="choose_class_name_string">choose class name</string>
    <string name="grade_string">grade</string>
    <string name="class_name_string">class name</string>
    <string name="create_register_string">Create register</string>
    <string name="generate_report_string">Generate Report</string>
    <string name="name_string"><u>Name</u></string>
    <string name="surname_string"><u>Surname</u></string>
    <string name="grade_10_b_register_string"><u>Grade 10 B Register</u></string>
    <string name="mpendulo_ek12_string">mpendulo</string>
    <string name="mpendulo_ek13_string">mpendulo</string>
    <string name="john_string">John</string>
    <string name="john_ek1_string">John</string>
    <string name="herman_string">Herman</string>
    <string name="herman_ek1_string">Herman</string>
    <string name="herman_ek2_string">Herman</string>
    <string name="herman_ek3_string">Herman</string>
    <string name="nxumalo_ek12_string">Nxumalo</string>
    <string name="nxumalo_ek13_string">Nxumalo</string>
    <string name="smith_string">Smith</string>
    <string name="smith_ek1_string">Smith</string>
    <string name="maseko_string">Maseko</string>
    <string name="maseko_ek1_string">Maseko</string>
    <string name="maseko_ek2_string">Maseko</string>
    <string name="maseko_ek3_string">Maseko</string>
    <string name="clocking_list_ek1_string">Clocking List</string>
    <string name="export_report_string">Export Report</string>
    <string name="done_string">Done</string>
    <string name="report_successfully_exported_string">Report successfully exported</string>

    <string-array name="grades">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="class_letter">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>

    <string-array name="Name">
        <item>Mpendulo</item>
        <item>Jabulani</item>
        <item>Herman</item>
        <item>Thami</item>
        <item>Steve</item>
    </string-array>

    <string-array name="Surname">
        <item>Nxumalo</item>
        <item>Maseko</item>
        <item>Maseko</item>
        <item>Buthelezi</item>
        <item>Sephiri</item>
    </string-array>


</resources>