<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		homescreen
	 *	@date 		Sunday 17th of July 2022 09:16:15 AM
	 *	@title 		Client Screens
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/clockinlistscreen" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_clockinlistscreen_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__clockinlistscreen_ek2"
					android:background="@drawable/_bg__clockinlistscreen_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="812dp" />


				<RelativeLayout android:id="@+id/group_1_ek1"
					android:layout_marginTop="610dp"
					android:layout_marginStart="35dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/back"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="20sp"
						android:textColor="@color/_bg__homescreen_ek2_color"
						android:layout_marginLeft="121dp"
						android:layout_marginTop="15dp"
						android:layout_width="73dp"
						android:layout_height="38dp"
						android:text="@string/back_string"
						 />

					<ImageView android:id="@+id/rectangle_4_ek1"
						android:src="@drawable/rectangle_4_ek1"
						android:contentDescription="rectangle_4_ek1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="306dp"
						android:layout_height="54dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/frame_1_ek1"
					android:layout_marginTop="6dp"
					android:layout_marginStart="163dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek1"
						android:src="@drawable/vector_ek1"
						android:contentDescription="vector_ek1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="49dp"
						android:layout_height="48dp" />

				</RelativeLayout>

				<View   android:id="@+id/rectangle_9"
					android:background="@drawable/rectangle_9_shape"
					 android:layout_marginStart="24dp"
					android:layout_marginTop="164dp"
					android:layout_width="327dp"
					android:layout_height="40dp" />

				<TextView android:id="@+id/search"
					android:fontFamily="Montserrat"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/search_color"
					android:layout_marginLeft="43dp"
					android:layout_marginTop="172dp"
					android:layout_width="84dp"
					android:layout_height="38dp"
					android:text="@string/search_string"
					 />


				<RelativeLayout android:id="@+id/search_svgrepo_com_1"
					android:layout_marginTop="171dp"
					android:layout_marginStart="315dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_ek1"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>


							<RelativeLayout android:id="@+id/group_ek2"
								android:layout_marginTop="0dp"
								android:layout_marginStart="0dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<ImageView android:id="@+id/vector_ek2"
									android:src="@drawable/vector_ek2"
									android:contentDescription="vector_ek2"
									 android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:layout_width="24.99dp"
									android:layout_height="25dp" />

								<ImageView android:id="@+id/vector_ek3"
									android:src="@drawable/vector_ek3"
									android:contentDescription="vector_ek3"
									 android:layout_marginStart="2dp"
									android:layout_marginTop="2dp"
									android:layout_width="12.34dp"
									android:layout_height="12.34dp" />

								<ImageView android:id="@+id/vector_ek4"
									android:src="@drawable/vector_ek4"
									android:contentDescription="vector_ek4"
									 android:layout_marginStart="4dp"
									android:layout_marginTop="7dp"
									android:layout_width="2.07dp"
									android:layout_height="4.63dp" />

								<ImageView android:id="@+id/vector_ek5"
									android:src="@drawable/vector_ek5"
									android:contentDescription="vector_ek5"
									 android:layout_marginStart="5dp"
									android:layout_marginTop="5dp"
									android:layout_width="2.25dp"
									android:layout_height="1.82dp" />

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

				<TextView android:id="@+id/search_student_by_name__surname__or_grade"
					android:fontFamily="Montserrat"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/rectangle_9_color"
					android:layout_marginLeft="18dp"
					android:layout_marginTop="85dp"
					android:layout_width="349dp"
					android:layout_height="62dp"
					android:text="@string/search_student_by_name__surname__or_grade_string"
					 />

				<TextView android:id="@+id/students_present_"
					android:fontFamily="Montserrat"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/_bg__homescreen_ek2_color"
					android:layout_marginLeft="96dp"
					android:layout_marginTop="241dp"
					android:layout_width="193dp"
					android:layout_height="38dp"
					android:text="@string/students_present__string"
					 />

				<TextView android:id="@+id/_15_june_2022"
					android:fontFamily="Montserrat"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__homescreen_ek2_color"
					android:layout_marginLeft="137dp"
					android:layout_marginTop="275dp"
					android:layout_width="108dp"
					android:layout_height="28.5dp"
					android:text="@string/_15_june_2022_string"
					 />


				<RelativeLayout android:id="@+id/frame_3"
					android:layout_marginTop="284dp"
					android:layout_marginStart="24dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/mpendulo"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="12dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_string"
						 />

					<TextView android:id="@+id/mpendulo_ek1"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="164dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek1_string"
						 />

					<TextView android:id="@+id/mpendulo_ek2"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="88dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek2_string"
						 />

					<TextView android:id="@+id/mpendulo_ek3"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="240dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek3_string"
						 />

					<TextView android:id="@+id/nxumalo"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="12dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_string"
						 />

					<TextView android:id="@+id/nxumalo_ek1"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="164dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek1_string"
						 />

					<TextView android:id="@+id/nxumalo_ek2"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="88dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek2_string"
						 />

					<TextView android:id="@+id/nxumalo_ek3"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="240dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek3_string"
						 />

					<TextView android:id="@+id/mpendulo_ek4"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="38dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek4_string"
						 />

					<TextView android:id="@+id/mpendulo_ek5"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="190dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek5_string"
						 />

					<TextView android:id="@+id/mpendulo_ek6"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="114dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek6_string"
						 />

					<TextView android:id="@+id/mpendulo_ek7"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="266dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek7_string"
						 />

					<TextView android:id="@+id/mpendulo_ek8"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="63dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek8_string"
						 />

					<TextView android:id="@+id/mpendulo_ek9"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="215dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek9_string"
						 />

					<TextView android:id="@+id/mpendulo_ek10"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="139dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek10_string"
						 />

					<TextView android:id="@+id/mpendulo_ek11"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="6dp"
						android:layout_marginTop="291dp"
						android:layout_width="96dp"
						android:layout_height="31dp"
						android:text="@string/mpendulo_ek11_string"
						 />

					<TextView android:id="@+id/nxumalo_ek4"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="38dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek4_string"
						 />

					<TextView android:id="@+id/nxumalo_ek5"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="190dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek5_string"
						 />

					<TextView android:id="@+id/nxumalo_ek6"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="114dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek6_string"
						 />

					<TextView android:id="@+id/nxumalo_ek7"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="266dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek7_string"
						 />

					<TextView android:id="@+id/nxumalo_ek8"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="63dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek8_string"
						 />

					<TextView android:id="@+id/nxumalo_ek9"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="215dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek9_string"
						 />

					<TextView android:id="@+id/nxumalo_ek10"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="139dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek10_string"
						 />

					<TextView android:id="@+id/nxumalo_ek11"
						android:fontFamily="Montserrat"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="16sp"
						android:textColor="@color/rectangle_9_color"
						android:layout_marginLeft="250dp"
						android:layout_marginTop="291dp"
						android:layout_width="86dp"
						android:layout_height="31dp"
						android:text="@string/nxumalo_ek11_string"
						 />

				</RelativeLayout>

			</RelativeLayout>




		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>